// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`not a card matches snapshot 1`] = `
<div
  style={
    Object {
      "border": "1px solid black",
      "maxWidth": "146 px",
    }
  }
>
  The card 
   has a weird format and we can't display it.
</div>
`;

exports[`regular card matches snapshot 1`] = `
<React.Fragment>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={false}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={
      <img
        className="tooltip-img"
        src="https://img.scryfall.com/cards/normal/en/rix/185.jpg?1524752669"
      />
    }
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={0}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="right"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    theme="dark"
    touchHold={false}
    trigger="mouseenter"
    unmountHTMLWhenHide={false}
  >
    <img
      src="https://img.scryfall.com/cards/small/en/rix/185.jpg?1524752669"
    />
  </Tooltip>
</React.Fragment>
`;

exports[`split card matches snapshot 1`] = `
<React.Fragment>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={false}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={
      <img
        className="tooltip-img tooltip-split"
        src="https://img.scryfall.com/cards/normal/en/akh/220a.jpg?1517813031"
      />
    }
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={0}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="right"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    theme="dark"
    touchHold={false}
    trigger="mouseenter"
    unmountHTMLWhenHide={false}
  >
    <img
      src="https://img.scryfall.com/cards/small/en/akh/220a.jpg?1517813031"
    />
  </Tooltip>
</React.Fragment>
`;

exports[`transform card matches snapshot 1`] = `
<React.Fragment>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={false}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={
      <img
        className="tooltip-img"
        src="https://img.scryfall.com/cards/normal/en/m19/218a.jpg?1531451175"
      />
    }
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={0}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="right"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    theme="dark"
    touchHold={false}
    trigger="mouseenter"
    unmountHTMLWhenHide={false}
  >
    <img
      src="https://img.scryfall.com/cards/small/en/m19/218a.jpg?1531451175"
    />
  </Tooltip>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={false}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={
      <img
        className="tooltip-img"
        src="https://img.scryfall.com/cards/normal/en/m19/218b.jpg?1531451175"
      />
    }
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={0}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="right"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    theme="dark"
    touchHold={false}
    trigger="mouseenter"
    unmountHTMLWhenHide={false}
  >
    <img
      src="https://img.scryfall.com/cards/small/en/m19/218b.jpg?1531451175"
    />
  </Tooltip>
</React.Fragment>
`;
